[metadata]
name = modcov
author = Gray King
author-email = grayking.w@gmail.com
summary = "A tool to check every module's code coverage."
version = 0.0.1
url = https://github.com/coldnight/modcov
license = Apache 2.0

classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7

[files]
packages = modcov

[entry_points]
console_scripts = 
    modcov = modcov:main
