[metadata]
name = modcov
author = Gray King
author-email = grayking.w@gmail.com
summary = "A tool to check every module's code coverage."
version = 0.0.2
url = https://github.com/coldnight/modcov
license = Apache 2.0

classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages = modcov

[entry_points]
console_scripts = 
    modcov = modcov:main
